syntax = "proto3";

package saq.sandwich.proto.api.v1;


import "proto/api/v1/data_source.proto";

// A private key.
message PrivateKey {
  oneof source {
    ASN1DataSource static = 1;
  }
}
